--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,18 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "xstring": "cpp",
+    "iostream": "cpp",
+    "fstream": "cpp",
+    "xlocmes": "cpp",
+    "string": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xutility": "cpp",
+    "ostream": "cpp",
+    "istream": "cpp",
+    "iosfwd": "cpp"
+  }
 }
